# oed_toolbox

./: .gitignore  README.md  beam_example_nonlinear_kernel.py  beam_global_approx_example.py  beam_laplace_approx_example.py  det_beam.py  local_lin_beam.py  oed_ape.py  oed_ape_debug.py  oed_det.py  oed_global_linear.py  oed_laplace_linear.py  oed_local_linear.py  oed_local_linear_3.py  oed_local_linear_4.py  oed_local_linear_ape_debug.py  oed_local_linear_grad_debug.py  oed_map.py  oed_map_debug.py  oed_optimise.py  oed_plot.py  oed_posterior_kl_metric.py  oed_sample.py  oed_variance.py  opt_A.txt  opt_B.txt  opt_C.txt  opt_D.txt  opt_E.txt  opt_F.txt  opt_G.txt  opt_H.txt  setup.cfg
examples/: Fisher Information and Predictive Covariance Checks.ipynb  Local Linearisation Posterior Analytic Case Check.ipynb  Local Linearisation Posterior and APE Analytic Case Check.ipynb  oed_local_linear_grad_debug.py
examples/.ipynb_checkpoints/: Fisher Information and Predictive Covariance Checks-checkpoint.ipynb  Local Linearisation Posterior Analytic Case Check-checkpoint.ipynb  Local Linearisation Posterior Numerical Case Check-checkpoint.ipynb  Local Linearisation Posterior and APE Analytic Case Check-checkpoint.ipynb
examples/Beams/: Beam Model Training.ipynb  Dependence of Fisher Information on Theta Guess.ipynb  Effect of Prior and Noise.ipynb  beam_oed.ipynb  (+2 more)
oed_toolbox/: __init__.py  ape_loss.py  cov_losses.py  covariances.py  distributions.py  expectations.py  logprobs.py  losses.py  model.py  models.py  optim.py  uncertainties.py  utils.py  wrappers.py
(+3 files in other folders)
