[metadata]
name = oed_toolbox
version = 0.0.0
author = Matthew Bilton
author_email = Matt.A.Bilton@gmail.com

url = https://github.com/MABilton/oed_toolbox

long_description = file: README.md
description = Losses, distributions, and covariance matrices for Optimal Experimental Design optimisations.
keywords = oed, experimental design, optimisation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
install_requires =
    numpy>=1.19.5
    scipy>=1.4.1
    jax>=0.2.19
    jaxlib>=0.1.69

packages = find:

[options.packages.find]
exclude =
    examples
    function_templates